Add Authentication repository and service
